--- a/hieradata_aws/class/production/router_backend.yaml
+++ b/hieradata_aws/class/production/router_backend.yaml
@@ -3,7 +3,7 @@ govuk_env_sync::tasks:
     ensure: "present"
     hour: "0"
     minute: "24"
-    action: "pull"
+    action: "push"
     dbms: "mongo"
     storagebackend: "s3"
     database: "router"
@@ -14,7 +14,7 @@ govuk_env_sync::tasks:
     ensure: "present"
     hour: "0"
     minute: "45"
-    action: "pull"
+    action: "push"
     dbms: "mongo"
     storagebackend: "s3"
     database: "draft_router"
