Move search spelling/benchmark jobs to AWS
Since we moved the cache machines (www-origin) to AWS, we've been
getting SSL errors when we try to query it from the Carrenza monitoring
machine, which is likely due to the /etc/hosts entries that are still
present on these machines. As these jobs are API-based, we should be
able to run them from the AWS production deploy machine instead.

--- a/hieradata_aws/class/production/jenkins.yaml
+++ b/hieradata_aws/class/production/jenkins.yaml
@@ -12,6 +12,8 @@ govuk_jenkins::job_builder::jobs:
   - govuk_jenkins::jobs::passive_checks
   - govuk_jenkins::jobs::publish_special_routes
   - govuk_jenkins::jobs::run_rake_task
+  - govuk_jenkins::jobs::search_benchmark
+  - govuk_jenkins::jobs::search_test_spelling_suggestions
   - govuk_jenkins::jobs::smokey
   - govuk_jenkins::jobs::smokey_deploy
   - govuk_jenkins::jobs::transition_load_all_data
