Enable data replication for Elasticsearch 5
* Pulls data from a new S3 bucket for AWS Managed Elasticsearch
snapshots
* Configures ES5 in Docker to read snapshots from a custom path
* Copies snapshots into the Docker container
* Restores snapshots to ES5

--- a/modules/govuk_search/templates/elasticsearch-docker-compose.yml
+++ b/modules/govuk_search/templates/elasticsearch-docker-compose.yml
@@ -9,9 +9,13 @@ services:
       - xpack.security.enabled=false
     volumes:
       - esdata5:/usr/share/elasticsearch/data
+      - dataimport:/usr/share/elasticsearch/import
+      - /usr/share/docker/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
     ports:
       - 9205:9200
 
 volumes:
   esdata5:
+    driver: local
+  dataimport:
     driver: local
