--- a/hieradata/staging.yaml
+++ b/hieradata/staging.yaml
@@ -52,6 +52,9 @@ govuk::apps::travel_advice_publisher::enable_email_alerts: true
 govuk::apps::whitehall::cpu_warning: 400
 govuk::apps::whitehall::cpu_critical: 600
 
+govuk_search::gor::replay_target_hosts:
+  - 'search-api.staging.govuk.digital'
+
 govuk::deploy::aws_ses_smtp_host: 'email-smtp.eu-west-1.amazonaws.com'
 govuk::deploy::config::errbit_environment_name: 'staging'
 govuk::deploy::setup::ssh_keys:
