--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -148,6 +148,8 @@ govuk::apps::support_api::pp_data_url: 'https://www.staging.performance.service.
 govuk::apps::support_api::aws_s3_bucket_name: 'govuk-staging-support-api-csvs'
 govuk::apps::travel_advice_publisher::enable_email_alerts: true
 
+govuk_search::gor::replay_target_hosts: []
+
 govuk::deploy::aws_ses_smtp_host: 'email-smtp.eu-west-1.amazonaws.com'
 govuk::deploy::config::errbit_environment_name: 'staging'
 govuk::deploy::config::licensify_app_domain: 'staging.publishing.service.gov.uk'
