ssl expiry verification after AWS migration
After the AWS migration of the cache machines, the monitoring of the:
1. www-origin.*.publishing.service.gov.uk should be done on AWS monitoring boxes only since these addresses are now pointing there.
2. www-origin.*.govuk.digital are also needed
3. www.staging.publishing.service.gov.uk should happen in AWS only

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -205,6 +205,7 @@ licensify::apps::licensify::environment: 'integration'
 licensify::apps::licensify_feed::environment: 'integration'
 
 monitoring::ci_environment: true
+monitoring::checks::aws_origin_domain: "integration.govuk.digital"
 monitoring::checks::sidekiq::enable_support_check: false
 monitoring::checks::pingdom::enable: false
 monitoring::checks::ses::region: eu-west-1
