--- a/hieradata/production.yaml
+++ b/hieradata/production.yaml
@@ -599,6 +599,7 @@ licensify::apps::licensify_admin::environment: 'production'
 licensify::apps::licensify::environment: 'production'
 licensify::apps::licensify_feed::environment: 'production'
 
+monitoring::checks::aws_origin_domain: "production.govuk.digital"
 monitoring::checks::mirror::enabled: true
 monitoring::checks::ses::region: us-east-1
 monitoring::checks::smokey::environment: 'production'
