--- a/hieradata_aws/production.yaml
+++ b/hieradata_aws/production.yaml
@@ -229,6 +229,7 @@ licensify::apps::licensify_admin::environment: 'production'
 licensify::apps::licensify::environment: 'production'
 licensify::apps::licensify_feed::environment: 'production'
 
+monitoring::checks::aws_origin_domain: "production.govuk.digital"
 monitoring::checks::sidekiq::enable_support_check: false
 monitoring::checks::ses::region: 'eu-west-1'
 monitoring::checks::rds::region: 'eu-west-1'
