Set rummager Plek env var for AWS content store
Rummager still lives in Carrenza.  Content Store uses Plek to work out
where the backends are, and updates Router API with this data.
Because the app domain has been changed in AWS staging, content items
served by Rummager are failing, eg:

- https://www.staging.publishing.service.gov.uk/sitemap.xml
- https://www.staging.publishing.service.gov.uk/api/search.json

--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -124,6 +124,7 @@ govuk::apps::content_publisher::google_tag_manager_id: "GTM-NQXC4TG"
 govuk::apps::content_publisher::google_tag_manager_preview: "env-5"
 govuk::apps::content_store::performance_platform_big_screen_view_url: 'https://performance-platform-big-screen-view-staging.cloudapps.digital'
 govuk::apps::content_store::performance_platform_spotlight_url: 'https://performance-platform-spotlight-staging.cloudapps.digital'
+govuk::apps::content_store::plek_service_rummager_uri: 'https://rummager.staging.publishing.service.gov.uk'
 govuk::apps::content_store::plek_service_whitehall_frontend_uri: 'https://whitehall-frontend.staging.publishing.service.gov.uk'
 govuk::apps::email_alert_api::db::backend_ip_range: '10.12.3.0/24'
 govuk::apps::email_alert_api::email_archive_s3_bucket: 'govuk-staging-email-alert-api-archive'
