--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -149,7 +149,13 @@ govuk::apps::support_api::pp_data_url: 'https://www.staging.performance.service.
 govuk::apps::support_api::aws_s3_bucket_name: 'govuk-staging-support-api-csvs'
 govuk::apps::travel_advice_publisher::enable_email_alerts: true
 
-govuk_search::gor::replay_target_hosts: []
+govuk::apps::collections::override_search_location: 'https://search-api.staging.govuk-internal.digital'
+# govuk::apps::content_tagger::override_search_location: 'https://search-api.staging.govuk-internal.digital' - in carrenza
+govuk::apps::finder_frontend::override_search_location: 'https://search-api.staging.govuk-internal.digital'
+# govuk::apps::hmrc_manuals_api::override_search_location: 'https://search-api.staging.govuk-internal.digital' - in carrenza
+govuk::apps::licencefinder::override_search_location: 'https://search-api.staging.govuk-internal.digital'
+# govuk::apps::search_admin::override_search_location: 'https://search-api.staging.govuk-internal.digital' - in carrenza
+# govuk::apps::whitehall::override_search_location: 'https://search-api.staging.govuk-internal.digital' - in carrenza
 
 govuk::deploy::aws_ses_smtp_host: 'email-smtp.eu-west-1.amazonaws.com'
 govuk::deploy::config::errbit_environment_name: 'staging'
