--- a/hieradata/staging.yaml
+++ b/hieradata/staging.yaml
@@ -54,11 +54,11 @@ govuk::apps::whitehall::cpu_critical: 600
 
 govuk_search::gor::port: 3233
 
-# govuk::apps::collections::override_search_location: 'https://search-api.staging.govuk.digital' - in aws
+govuk::apps::collections::override_search_location: NULL
 govuk::apps::content_tagger::override_search_location: 'https://search-api.staging.govuk.digital'
-# govuk::apps::finder_frontend::override_search_location: 'https://search-api.staging.govuk.digital' - in aws
+govuk::apps::finder_frontend::override_search_location: NULL
 govuk::apps::hmrc_manuals_api::override_search_location: 'https://search-api.staging.govuk.digital'
-# govuk::apps::licencefinder::override_search_location: 'https://search-api.staging.govuk.digital' - in aws
+govuk::apps::licencefinder::override_search_location: NULL
 govuk::apps::search_admin::override_search_location: 'https://search-api.staging.govuk.digital'
 govuk::apps::whitehall::override_search_location: 'https://search-api.staging.govuk.digital'
 
