--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -159,6 +159,8 @@ govuk::apps::licencefinder::override_search_location: 'https://search-api.stagin
 govuk::apps::search_admin::override_search_location: NULL
 govuk::apps::whitehall::override_search_location: NULL
 
+govuk::apps::rummager::enable_rummager: false
+
 govuk::deploy::aws_ses_smtp_host: 'email-smtp.eu-west-1.amazonaws.com'
 govuk::deploy::config::errbit_environment_name: 'staging'
 govuk::deploy::config::licensify_app_domain: 'staging.publishing.service.gov.uk'
