--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -862,6 +862,7 @@ govuk_ci::master::pipeline_jobs:
   govuk_app_config: {}
   govuk-cdn-config: {}
   govuk-content-schema-test-helpers: {}
+  govuk-csp-forwarder: {}
   govuk-dummy_content_store: {}
   govuk-dependencies: {}
   govuk-developer-docs: {}
