Fix the PostgreSQL version on the Content Data API DB Admin machine
It's currently 9.3, but this means pg_dump doesn't work with the 9.6
server hosted through RDS. So, switch the local PostgreSQL version to
9.6.

Exclude the content_data_api_db_admin class from the
govuk_nodes_spec_optional test file, as this isn't set up to properly
test classes just used on AWS yet.

--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -856,6 +856,8 @@ govuk::node::s_backend_lb::assets_carrenza_real_ip_header: "True-Client-Ip"
 
 govuk::node::s_db_admin::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
 
+govuk::node::s_content_data_api_db_admin::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
+
 govuk::node::s_email_alert_api_db_admin::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
 
 govuk::node::s_graphite::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
