fix database sync after migration
clean up the hiera data of Carrenza to remove database sync in Carrenza since these are no longer needed after the AWS migration

--- a/hieradata/node/mongo-1.backend.staging.publishing.service.gov.uk.yaml
+++ b/hieradata/node/mongo-1.backend.staging.publishing.service.gov.uk.yaml
@@ -1,6 +1,6 @@
 govuk_env_sync::tasks:
   "push_licence_finder_production":
-    ensure: "present"
+    ensure: "absent"
     hour: "1"
     minute: "21"
     action: "push"
@@ -77,7 +77,7 @@ govuk_env_sync::tasks:
     url: "govuk-staging-database-backups"
     path: "mongo-normal"
   "push_imminence_production":
-    ensure: "present"
+    ensure: "absent"
     hour: "3"
     minute: "0"
     action: "push"
