--- a/hieradata_aws/production.yaml
+++ b/hieradata_aws/production.yaml
@@ -195,6 +195,8 @@ govuk_elasticsearch::dump::run_es_dump_hour: '4'
 
 govuk_jenkins::job_builder::environment: 'production'
 
+govuk_jenkins::jobs::content_data_api::rake_etl_master_process_cron_schedule: '0 7 * * *'
+
 govuk_jenkins::jobs::deploy_emergency_banner::clear_cdn_cache: true
 
 govuk_jenkins::jobs::search_fetch_analytics_data::skip_page_traffic_load: true
