--- a/hieradata_aws/class/integration/search.yaml
+++ b/hieradata_aws/class/integration/search.yaml
@@ -1,133 +1,23 @@
 govuk_env_sync::tasks:
-  "pull_es_metasearch_daily":
-    ensure: "absent"
-    hour: "4"
-    minute: "24"
-    action: "pull"
-    dbms: "elasticsearch5"
-    storagebackend: "es_snapshot"
-    database: "metasearch"
-    temppath: "/tmp/es_snapshot_metasearch"
-    url: "govuk-staging"
-    path: "elasticsearch5"
-  "push_es_metasearch_daily":
-    ensure: "absent"
-    hour: "3"
-    minute: "24"
-    action: "push"
-    dbms: "elasticsearch5"
-    storagebackend: "es_snapshot"
-    database: "metasearch"
-    temppath: "/tmp/es_snapshot_metasearch"
-    url: "govuk-integration"
-    path: "elasticsearch5"
-  "pull_es_page_traffic_daily":
-    ensure: "absent"
-    hour: "4"
-    minute: "24"
-    action: "pull"
-    dbms: "elasticsearch5"
-    storagebackend: "es_snapshot"
-    database: "page-traffic"
-    temppath: "/tmp/es_snapshot_page-traffic"
-    url: "govuk-staging"
-    path: "elasticsearch5"
-  "push_es_page_traffic_daily":
-    ensure: "absent"
-    hour: "3"
-    minute: "24"
-    action: "push"
-    dbms: "elasticsearch5"
-    storagebackend: "es_snapshot"
-    database: "page-traffic"
-    temppath: "/tmp/es_snapshot_page-traffic"
-    url: "govuk-integration"
-    path: "elasticsearch5"
-  "pull_es_detailed_daily":
-    ensure: "absent"
-    hour: "4"
-    minute: "24"
-    action: "pull"
-    dbms: "elasticsearch5"
-    storagebackend: "es_snapshot"
-    database: "detailed"
-    temppath: "/tmp/es_snapshot_detailed"
-    url: "govuk-staging"
-    path: "elasticsearch5"
-  "push_es_detailed_daily":
-    ensure: "absent"
-    hour: "3"
-    minute: "24"
-    action: "push"
-    dbms: "elasticsearch5"
-    storagebackend: "es_snapshot"
-    database: "detailed"
-    temppath: "/tmp/es_snapshot_detailed"
-    url: "govuk-integration"
-    path: "elasticsearch5"
-  "pull_es_government_daily":
-    ensure: "absent"
-    hour: "4"
-    minute: "24"
-    action: "pull"
-    dbms: "elasticsearch5"
-    storagebackend: "es_snapshot"
-    database: "government"
-    temppath: "/tmp/es_snapshot_government"
-    url: "govuk-staging"
-    path: "elasticsearch5"
-  "push_es_government_daily":
-    ensure: "absent"
-    hour: "3"
-    minute: "24"
-    action: "push"
-    dbms: "elasticsearch5"
-    storagebackend: "es_snapshot"
-    database: "government"
-    temppath: "/tmp/es_snapshot_government"
-    url: "govuk-integration"
-    path: "elasticsearch5"
-  "pull_es_govuk_daily":
-    ensure: "absent"
-    hour: "4"
-    minute: "24"
-    action: "pull"
-    dbms: "elasticsearch5"
-    storagebackend: "es_snapshot"
-    database: "govuk"
-    temppath: "/tmp/es_snapshot_govuk"
-    url: "govuk-staging"
-    path: "elasticsearch5"
-  "push_es_govuk_daily":
-    ensure: "absent"
-    hour: "3"
-    minute: "24"
-    action: "push"
-    dbms: "elasticsearch5"
-    storagebackend: "es_snapshot"
-    database: "govuk"
-    temppath: "/tmp/es_snapshot_govuk"
-    url: "govuk-integration"
-    path: "elasticsearch5"
-  "pull_es_licence_finder_daily":
+  "pull_es_everything_daily":
     ensure: "present"
     hour: "4"
     minute: "24"
     action: "pull"
     dbms: "elasticsearch5"
     storagebackend: "es_snapshot"
-    database: "licence-finder"
-    temppath: "/tmp/es_snapshot_licence-finder"
+    database: "everything"
+    temppath: "/tmp/es_snapshot_everything"
     url: "govuk-staging"
     path: "elasticsearch5"
-  "push_es_licence_finder_daily":
+  "push_es_everything_daily":
     ensure: "present"
-    hour: "2"
+    hour: "3"
     minute: "24"
-    action: "pull"
+    action: "push"
     dbms: "elasticsearch5"
     storagebackend: "es_snapshot"
-    database: "licence-finder"
-    temppath: "/tmp/es_snapshot_licence-finder"
+    database: "everything"
+    temppath: "/tmp/es_snapshot_everything"
     url: "govuk-integration"
     path: "elasticsearch5"
