--- a/hieradata/production.yaml
+++ b/hieradata/production.yaml
@@ -91,6 +91,9 @@ govuk::apps::travel_advice_publisher::enable_email_alerts: true
 govuk::apps::whitehall::cpu_warning: 400
 govuk::apps::whitehall::cpu_critical: 600
 
+govuk_search::gor::replay_target_hosts:
+  - 'search-api.production.govuk.digital'
+
 govuk::apps::rummager::enable_rummager: true
 
 govuk::deploy::actionmailer_enable_delivery: true
