Enable managed ES monitoring in all AWS environments

--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -158,6 +158,9 @@ govuk::apps::travel_advice_publisher::enable_email_alerts: true
 
 govuk_search::gor::port: 3233
 
+govuk_search::monitoring::es_port: '80'
+govuk_search::monitoring::es_host: 'elasticsearch5.blue.production.govuk-internal.digital'
+
 govuk::apps::collections::override_search_location: 'https://search-api.staging.govuk-internal.digital'
 govuk::apps::content_tagger::override_search_location: NULL
 govuk::apps::finder_frontend::override_search_location: 'https://search-api.staging.govuk-internal.digital'
