--- a/hieradata_aws/production.yaml
+++ b/hieradata_aws/production.yaml
@@ -155,6 +155,9 @@ govuk::apps::travel_advice_publisher::enable_email_alerts: true
 
 govuk_search::gor::port: 3233
 
+govuk_search::monitoring::es_port: '80'
+govuk_search::monitoring::es_host: 'elasticsearch5.blue.staging.govuk-internal.digital'
+
 govuk_search::gor::replay_target_hosts: []
 
 govuk::apps::rummager::enable_rummager: false
