Add user anafernandez
User anafernandez is back to GDS and GOV.UK RE team.

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -223,6 +223,7 @@ users::usernames:
   - agnieszkadufrat
   - alangabbianelli
   - alexandrujurubita
+  - anafernandez
   - andysellick
   - anikahenke
   - benthorner
