--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -190,6 +190,7 @@ users::usernames:
   - agnieszkadufrat
   - alangabbianelli
   - alexandrujurubita
+  - anafernandez
   - andysellick
   - anikahenke
   - benthorner
