Added user Camille Descartes and public key

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -228,6 +228,7 @@ users::usernames:
   - benthorner
   - bevanloon
   - brucebolt
+  - camilledescartes
   - christopherbaines
   - conorglynn
   - deanwilson
