--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -195,6 +195,7 @@ users::usernames:
   - benthorner
   - bevanloon
   - brucebolt
+  - camilledescartes
   - christopherbaines
   - conorglynn
   - deanwilson
