Restore the support_contacts pull job in Staging AWS
I incorrectly removed this while trying to remove data sync jobs for
non-existent apps, but the Support API which uses this database does
run in AWS.

--- a/hieradata_aws/class/staging/db_admin.yaml
+++ b/hieradata_aws/class/staging/db_admin.yaml
@@ -54,3 +54,14 @@ govuk_env_sync::tasks:
     temppath: "/tmp/content_data_admin_production"
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
+  "pull_support_contacts_production_daily":
+    ensure: "present"
+    hour: "2"
+    minute: "3"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "support_contacts_production"
+    temppath: "/tmp/support_contacts_production"
+    url: "govuk-production-database-backups"
+    path: "postgresql-backend"
