gives christopherashton ssh access to integration

--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -196,6 +196,7 @@ users::usernames:
   - benthorner
   - bevanloon
   - brucebolt
+  - christopherashton
   - christopherbaines
   - conorglynn
   - deanwilson
