Add ssh access for Camille Descartes to integration
  Camille has joined the re-govuk team

--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -193,6 +193,7 @@ users::usernames:
   - benthorner
   - bevanloon
   - brucebolt
+  - camilledescartes
   - christopherashton
   - christopherbaines
   - conorglynn
