--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -229,6 +229,7 @@ users::usernames:
   - benthorner
   - bevanloon
   - brucebolt
+  - camilledescartes
   - christopherbaines
   - conorglynn
   - deanwilson
