Add content data api to development VM
This fixes an issue where content data api subdomain doesn't work
from the development VM. This was due to the Nginx routing
requests to the incorrect port and content-data-api not being
added to /etc/hosts/

--- a/hieradata/development.yaml
+++ b/hieradata/development.yaml
@@ -33,6 +33,7 @@ govuk::node::s_development::apps:
   - 'collections_publisher'
   - 'contacts'
   - 'content_audit_tool'
+  - 'content_data_api'
   - 'content_performance_manager'
   - 'content_performance_manager::rabbitmq'
   - 'content_publisher'
@@ -260,6 +261,7 @@ hosts::development::apps:
   - 'collections-publisher'
   - 'contacts-admin'
   - 'content-data-admin'
+  - 'content-data-api'
   - 'content-performance-manager'
   - 'content-publisher'
   - 'content-store'
