--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -1075,6 +1075,7 @@ grafana::dashboards::application_dashboards:
     show_sidekiq_graphs: true
     has_workers: true
   authenticating-proxy: {}
+  cache-clearing-service: {}
   calculators: {}
   calendars: {}
   ckan:
@@ -1123,6 +1124,7 @@ grafana::dashboards::application_dashboards:
     show_sidekiq_graphs: true
     has_workers: true
   email-alert-frontend: {}
+  email-alert-service: {}
   feedback: {}
   finder-frontend:
     show_external_request_time: true
@@ -1168,11 +1170,13 @@ grafana::dashboards::application_dashboards:
     instance_prefix: 'publishing_api'
     show_memcached: true
   release: {}
+  router: {}
   router-api: {}
   search-admin: {}
   service-manual-frontend: {}
   service-manual-publisher: {}
   short-url-manager: {}
+  sidekiq-monitoring: {}
   signon:
     show_sidekiq_graphs: true
     has_workers: true
