Make the legend of the NGinx Requests dashboard more useful
Show the average, current, maximum and minimum values, and hide series
with only null values.

--- a/modules/grafana/files/dashboards/nginx_requests.json
+++ b/modules/grafana/files/dashboards/nginx_requests.json
@@ -137,14 +137,17 @@
           "id": 1,
           "legend": {
             "alignAsTable": true,
-            "avg": false,
-            "current": false,
-            "max": false,
-            "min": false,
+            "avg": true,
+            "current": true,
+            "hideEmpty": true,
+            "max": true,
+            "min": true,
             "rightSide": false,
             "show": true,
+            "sort": "max",
+            "sortDesc": true,
             "total": false,
-            "values": false
+            "values": true
           },
           "lines": true,
           "linewidth": 1,
