Configure the environment sync for the Content Data Admin
The Content Data Admin does use a PostgreSQL database, so for
consistency, sync it between environments. It doesn't contain any data
other than user data stored by gds-sso, so this isn't very useful.

Some of the configuration was already in place, so just put the rest
in, and enable the absent tasks.

Also change the integration pull task to pull from Production, rather
than Staging, as this is how the data syncs have worked in the past,
and I couldn't find any reason to do differently.

--- a/hieradata_aws/class/integration/db_admin.yaml
+++ b/hieradata_aws/class/integration/db_admin.yaml
@@ -132,13 +132,24 @@ govuk_env_sync::tasks:
     url: "govuk-staging-database-backups"
     path: "postgresql-backend"
   "pull_content_data_admin_production_daily":
-    ensure: "absent"
+    ensure: "present"
     hour: "4"
     minute: "18"
     action: "pull"
     dbms: "postgresql"
     storagebackend: "s3"
     database: "content_data_admin_production"
-    temppath: "/tmp/content_data_admin_production"
-    url: "govuk-staging-database-backups"
+    temppath: "/tmp/content_data_admin_production_pull"
+    url: "govuk-production-database-backups"
+    path: "postgresql-backend"
+  "push_content_data_admin_production_daily":
+    ensure: "present"
+    hour: "5"
+    minute: "0"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "content_data_admin_production"
+    temppath: "/tmp/content_data_admin_production_push"
+    url: "govuk-integration-database-backups"
     path: "postgresql-backend"
