--- a/hieradata_aws/class/staging/db_admin.yaml
+++ b/hieradata_aws/class/staging/db_admin.yaml
@@ -51,8 +51,19 @@ govuk_env_sync::tasks:
     dbms: "postgresql"
     storagebackend: "s3"
     database: "content_data_admin_production"
-    temppath: "/tmp/content_data_admin_production"
+    temppath: "/tmp/content_data_admin_production_pull"
     url: "govuk-production-database-backups"
+    path: "postgresql-backend"
+  "push_content_data_admin_production_daily":
+    ensure: "present"
+    hour: "1"
+    minute: "18"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "content_data_admin_production"
+    temppath: "/tmp/content_data_admin_production_push"
+    url: "govuk-staging-database-backups"
     path: "postgresql-backend"
   "pull_support_contacts_production_daily":
     ensure: "present"
