Add Content Data API credentials to vagrant_credentials.yaml
These might be relevant if the govuk-puppet Vagrantfile is used.

--- a/hieradata/vagrant_credentials.yaml
+++ b/hieradata/vagrant_credentials.yaml
@@ -35,6 +35,8 @@ govuk::apps::content_audit_tool::db::password: 'MDgTmQKvEAax4wgefQAZRNDTajkdtEVf
 govuk::apps::content_audit_tool::db_password: "%{hiera('govuk::apps::content_audit_tool::db::password')}"
 govuk::apps::content_data_admin::db::password: 'FrkwKJGjLAjbznLtPhFjVy7YEonLKJTr'
 govuk::apps::content_data_admin::db_password: "%{hiera('govuk::apps::content_data_admin::db::password')}"
+govuk::apps::content_data_api::db_password: "%{hiera('govuk::apps::content_data_api::db::password')}"
+govuk::apps::content_data_api::db::password: 'jo6Kah0kuokaighoughePhooch1Eequu'
 govuk::apps::content_publisher::db::password: 'a7NnCu8JNPcKsYDFJpC3HpbxsdZYttMt'
 govuk::apps::content_publisher::db_password: "%{hiera('govuk::apps::content_publisher::db::password')}"
 govuk::apps::content_tagger::db_password: "%{hiera('govuk::apps::content_tagger::db::password')}"
