Fix a typo in the vagrant_credentials.yaml file

--- a/hieradata/vagrant_credentials.yaml
+++ b/hieradata/vagrant_credentials.yaml
@@ -37,7 +37,7 @@ govuk::apps::content_data_admin::db::password: 'FrkwKJGjLAjbznLtPhFjVy7YEonLKJTr
 govuk::apps::content_data_admin::db_password: "%{hiera('govuk::apps::content_data_admin::db::password')}"
 govuk::apps::content_performance_manager::db_password: "%{hiera('govuk::apps::content_performance_manager::db::password')}"
 govuk::apps::content_performance_manager::db::password: 'jo6Kah0kuokaighoughePhooch1Eequu'
-govuk::apps::eontent_publisher::db::password: 'a7NnCu8JNPcKsYDFJpC3HpbxsdZYttMt'
+govuk::apps::content_publisher::db::password: 'a7NnCu8JNPcKsYDFJpC3HpbxsdZYttMt'
 govuk::apps::content_publisher::db_password: "%{hiera('govuk::apps::content_publisher::db::password')}"
 govuk::apps::content_tagger::db_password: "%{hiera('govuk::apps::content_tagger::db::password')}"
 govuk::apps::content_tagger::db::password: '6bab0d694abaabc64f4b40fcd7e51'
