Fix action for push_content_data_admin_*_daily sync tasks
They were incorrectly set to pull tasks.

--- a/hieradata_aws/class/staging/db_admin.yaml
+++ b/hieradata_aws/class/staging/db_admin.yaml
@@ -58,7 +58,7 @@ govuk_env_sync::tasks:
     ensure: "present"
     hour: "1"
     minute: "18"
-    action: "pull"
+    action: "push"
     dbms: "postgresql"
     storagebackend: "s3"
     database: "content_data_admin_production"
