--- a/hieradata_aws/class/integration/db_admin.yaml
+++ b/hieradata_aws/class/integration/db_admin.yaml
@@ -146,7 +146,7 @@ govuk_env_sync::tasks:
     ensure: "present"
     hour: "5"
     minute: "0"
-    action: "pull"
+    action: "push"
     dbms: "postgresql"
     storagebackend: "s3"
     database: "content_data_admin_production"
