--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -85,9 +85,6 @@ node_class: &node_class
   mirrorer:
     apps:
       - govuk-crawler-worker
-  monitoring:
-    apps:
-      - datagovuk_publish
   router_backend:
     apps:
       - router-api
@@ -122,7 +119,6 @@ govuk::apps::content_store::performance_platform_big_screen_view_url: 'https://p
 govuk::apps::content_store::performance_platform_spotlight_url: 'https://performance-platform-spotlight-staging.cloudapps.digital'
 govuk::apps::content_store::plek_service_whitehall_frontend_uri: 'https://whitehall-frontend.staging.publishing.service.gov.uk'
 
-govuk::apps::datagovuk_publish::host: 'publish-data-beta-staging.cloudapps.digital'
 govuk::apps::email_alert_service::enabled: false
 govuk::apps::email_alert_service::rabbitmq::ensure: 'absent'
 govuk::apps::email_alert_api::db::backend_ip_range: '10.12.3.0/24'
@@ -226,6 +222,8 @@ licensify::apps::licensify::environment: 'staging'
 licensify::apps::licensify_feed::environment: 'staging'
 
 monitoring::checks::aws_origin_domain: "staging.govuk.digital"
+monitoring::checks::datagovuk_publish::ensure: 'present'
+monitoring::checks::datagovuk_publish::host: 'publish-data-beta-staging.cloudapps.digital'
 monitoring::checks::sidekiq::enable_support_check: false
 monitoring::checks::ses::region: 'eu-west-1'
 monitoring::checks::rds::region: 'eu-west-1'
