Set the slack_username for Icinga notifications in more environments
And also tweak the wording for Production. This makes it possible to
have Icinga Slack notifications in environments other than production.

--- a/hieradata/production.yaml
+++ b/hieradata/production.yaml
@@ -570,7 +570,7 @@ monitoring::contacts::notify_graphite: true
 monitoring::contacts::notify_pager: true
 monitoring::contacts::notify_slack: true
 monitoring::contacts::slack_channel: '#govuk-alerts'
-monitoring::contacts::slack_username: 'Carrenza Production'
+monitoring::contacts::slack_username: 'Production (Carrenza)'
 monitoring::edge::enabled: true
 monitoring::uptime_collector::environment: 'production'
 
