--- a/hieradata/staging.yaml
+++ b/hieradata/staging.yaml
@@ -520,6 +520,7 @@ monitoring::checks::sidekiq::enable_support_check: false
 monitoring::checks::ses::region: eu-west-1
 monitoring::checks::smokey::environment: 'staging'
 monitoring::uptime_collector::environment: 'staging'
+monitoring::contacts::slack_username: 'Staging (Carrenza)'
 
 postfix::smarthost:
   - 'email-smtp.us-east-1.amazonaws.com:587'
