adds details for user Samuel Culley

--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -359,6 +359,7 @@ users::usernames:
   - richardmorton
   - rochtrinque
   - rubenarakelyan
+  - samuelculley 
   - seanrankine
   - sebastianschmieschek
   - sebastianszypowicz
