--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -252,6 +252,7 @@ users::usernames:
   - richardmorton
   - rochtrinque
   - rubenarakelyan
+  - samuelculley 
   - seanrankine
   - sebastianschmieschek
   - sebastianszypowicz
