Add Jonathon to the manifests for ssh access into Integration

--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -342,6 +342,7 @@ users::usernames:
   - ianjames
   - jessicajones
   - jonathanhallam
+  - jonathonshire
   - joskoetsier
   - julianstandring
   - karlbaker
