Fix the slack_alert_url for AWS environments
The previous use of `hiera('app_domain')` was ending up pointing at
alert.staging.publishing.service.gov.uk for example, rather than
alert.staging.govuk.digital as intended.

--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -1115,7 +1115,7 @@ monitoring::checks::http_username: "%{hiera('http_username')}"
 monitoring::checks::http_password: "%{hiera('http_password')}"
 monitoring::client::alert_hostname: 'alert'
 monitoring::client::graphite_hostname: 'graphite'
-monitoring::contacts::slack_alert_url: "https://alert.%{hiera('app_domain')}/cgi-bin/icinga/status.cgi"
+monitoring::contacts::slack_alert_url: "https://alert.%{hiera('stackname')}.govuk.digital/cgi-bin/icinga/status.cgi"
 
 monitoring::checks::smokey::features:
   check_bouncer:
