Add Jonathon Shire to CI

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -236,6 +236,7 @@ users::usernames:
   - ianjames
   - jessicajones
   - jonathanhallam
+  - jonathonshire
   - joskoetsier
   - julianstandring
   - karlbaker
