Training Environment Data Sync Push
Set up integration to push data to S3 daily.

--- a/hieradata_aws/class/integration/db_admin.yaml
+++ b/hieradata_aws/class/integration/db_admin.yaml
@@ -10,14 +10,58 @@ govuk_env_sync::tasks:
     temppath: "/tmp/content_data_admin_production_pull"
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
-  "push_content_data_admin_production_daily":
+  "push_ckan_integration_daily":
     ensure: "present"
-    hour: "5"
+    hour: "23"
+    minute: "30"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "ckan_production"
+    temppath: "/tmp/ckan_production"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "push_content_data_admin_integration_daily":
+    ensure: "present"
+    hour: "1"
     minute: "0"
     action: "push"
     dbms: "postgresql"
     storagebackend: "s3"
     database: "content_data_admin_production"
     temppath: "/tmp/content_data_admin_production_push"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "push_local-links-manager_integration_daily":
+    ensure: "present"
+    hour: "3"
+    minute: "0"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "local-links-manager_production"
+    temppath: "/tmp/local-links-manager_production"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "push_link-checker-api_integration_daily":
+    ensure: "present"
+    hour: "3"
+    minute: "0"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "link_checker_api_production"
+    temppath: "/tmp/link-checker-api_production"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "push_support-contacts_integration_daily":
+    ensure: "present"
+    hour: "2"
+    minute: "30"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "support_contacts_production"
+    temppath: "/tmp/"
     url: "govuk-integration-database-backups"
     path: "postgresql-backend"
