--- a/hieradata_aws/class/integration/mongo.yaml
+++ b/hieradata_aws/class/integration/mongo.yaml
@@ -1,7 +1,7 @@
 govuk_env_sync::tasks:
   "pull_content_store_daily":
     ensure: "present"
-    hour: "4" 
+    hour: "4"
     minute: "16"
     action: "pull"
     dbms: "mongo"
@@ -12,7 +12,7 @@ govuk_env_sync::tasks:
     path: "mongo-api"
   "pull_draft_content_store_daily":
     ensure: "present"
-    hour: "4" 
+    hour: "4"
     minute: "16"
     action: "pull"
     dbms: "mongo"
@@ -31,4 +31,48 @@ govuk_env_sync::tasks:
     database: "imminence_production"
     temppath: "/var/lib/mongodb/.dumps"
     url: "govuk-staging-database-backups"
+    path: "mongo-normal"
+  "push_imminence_integration":
+    ensure: "present"
+    hour: "3"
+    minute: "0"
+    action: "push"
+    dbms: "mongo"
+    storagebackend: "s3"
+    database: "imminence_production"
+    temppath: "/var/lib/mongodb/.dumps"
+    url: "govuk-integration-database-backups"
+    path: "mongo-normal"
+  "push_content_store_daily":
+    ensure: "present"
+    hour: "0"
+    minute: "16"
+    action: "push"
+    dbms: "mongo"
+    storagebackend: "s3"
+    database: "content_store_production"
+    temppath: "/var/lib/mongodb/.dumps"
+    url: "govuk-integration-database-backups"
+    path: "mongo-api"
+  "push_draft_content_store_daily":
+    ensure: "present"
+    hour: "1"
+    minute: "16"
+    action: "push"
+    dbms: "mongo"
+    storagebackend: "s3"
+    database: "draft_content_store_production"
+    temppath: "/var/lib/mongodb/.dumps"
+    url: "govuk-integration-database-backups"
+    path: "mongo-api"
+  "push_licence_finder_integration":
+    ensure: "present"
+    hour: "0"
+    minute: "21"
+    action: "push"
+    dbms: "mongo"
+    storagebackend: "s3"
+    database: "licence_finder_production"
+    temppath: "/var/lib/mongodb/.dumps"
+    url: "govuk-integration-database-backups"
     path: "mongo-normal"
